# lite3

./: .gitignore
deploy/mqtt/hdl_localization/: CMakeLists.txt  package.xml
deploy/mqtt/lite3_bringup/: CMakeLists.txt  package.xml
src/: pyproject.toml
src/lite3_asr/: __init__.py  backend.py  config.py  service.py  vad.py
src/lite3_behavior/: __init__.py  command_arbiter.py  patrol_controller.py  patrol_events.py  patrol_fsm.py
src/lite3_common/: __init__.py  config.py  runtime_gate.py  types.py
src/lite3_control/: __init__.py  readiness_gate.py  runtime_motion_output.py  safety_filter.py  udp_driver.py  watchdog.py
src/lite3_iq9/: __init__.py  camera_source.py  nav2_waypoint_client.py  nav_graph_probe.py  ros2_state_bridge.py  ros2_waypoint_sender.py  runtime_state.py  state_subscribers.py  waypoint_patrol.py  waypoint_route.py
src/lite3_motion/: __init__.py  direct_return.py  local_avoidance.py  local_return.py  pointcloud_clearance.py  state_receiver.py  target_tracking.py
src/lite3_mqtt/: __init__.py  client.py  contract.py  coyote_bridge.py  direct_patrol.py  media.py  patrol.py  perception_host.py  runtime.py
src/lite3_navigation/: __init__.py  odom_tracker.py  return_home.py
src/lite3_perception/: __init__.py  camera_node.py  coyote_pipeline.py  coyote_spool.py  lidar_boundary_detector.py  perception_node.py  udp_camera_receiver.py
src/lite3_ros/: __init__.py  coyote_bridge_rclpy_node.py  lidar_adapter.py  odom_adapter.py  patrol_node.py  patrol_rclpy_node.py  perception_rclpy_node.py  udp_camera_rclpy_node.py
src/lite3_voice/: __init__.py  catalog.py  executor.py  policy.py  voice_rag.py  voice_tts.py
src/lite3_web/: __init__.py  server.py
src/lite3_web/static/: index.html
src/tests/mqtt/: test_client.py  (+12 more)
(+103 files in other folders)
