[project]
name = "ifa-qc-hl-lite3-patrol"
version = "0.1.0"
description = "Mapless Lite3 patrol MVP core and safety setup"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=5.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lite3_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
