<?xml version="1.0"?>
<package format="3">
  <name>hdl_localization</name>
  <version>0.0.0</version>
  <description>Message-only compatibility package for Lite3 localization status.</description>
  <maintainer email="ukerrym@gmail.com">dax um</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
